--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  path: any
   provider: ^4.3.2+1
   rxdart: 0.22.2
   sqflite: ^1.3.1+1
   path_provider: ^1.6.14
   cupertino_icons: ^0.1.3
   modal_bottom_sheet: ^0.2.0+1
+  path_provider_macos: ^0.0.1
+  flutter_sfsymbols: ^1.0.0
+  cupertino_superellipse: ^1.0.1
 
 #/usr/local/lib/ruby/gems/2.7.0/bin/pod 
 dev_dependencies:
@@ -67,9 +70,7 @@ flutter:
      - family: SF
        fonts:
          - asset: fonts/SF-Pro.ttf
-#         - asset: fonts/Schyler-Regular.ttf
-#         - asset: fonts/Schyler-Italic.ttf
-#           style: italic
+
      - family: SF-Rounded
        fonts:
          - asset: fonts/SF-Pro-Rounded-Regular.otf
@@ -80,6 +81,9 @@ flutter:
            weight: 600
          - asset: fonts/SF-Pro-Rounded-Bold.otf
            weight: 700
+     - family: sficonsets
+       fonts:
+          - asset: packages/flutter_sfsymbols/fonts/sficonsets.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
